--- a/Coursework2/Project_Template.vcxproj.filters
+++ b/Coursework2/Project_Template.vcxproj.filters
@@ -28,6 +28,12 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{3ef89db1-3b2b-4189-83df-b7ad9895bdff}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\imgui">
+      <UniqueIdentifier>{2e8b8188-2387-4fc6-a9c4-933cd06cac7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="helper\imgui">
+      <UniqueIdentifier>{3972ff55-734d-4e97-8b4d-702424dd1ec1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -60,6 +66,33 @@
     <ClCompile Include="helper\plane.cpp">
       <Filter>helper</Filter>
     </ClCompile>
+    <ClCompile Include="helper\texture.cpp">
+      <Filter>helper</Filter>
+    </ClCompile>
+    <ClCompile Include="helper\stb\stb_image.cpp">
+      <Filter>helper\stb</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_glfw.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_opengl3.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\basic_uniform.frag">
@@ -68,10 +101,22 @@
     <None Include="shader\basic_uniform.vert">
       <Filter>shaders</Filter>
     </None>
-    <None Include="shader\projectshader.frag">
+    <None Include="shader\particle_shader.frag">
       <Filter>shaders</Filter>
     </None>
-    <None Include="shader\projectshader.vert">
+    <None Include="shader\particle_shader.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\flat_frag.glsl">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\flat_vert.glsl">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\scene_lighting.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\scene_lighting.vert">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
@@ -126,6 +171,36 @@
     </ClInclude>
     <ClInclude Include="helper\particleutils.h">
       <Filter>helper</Filter>
+    </ClInclude>
+    <ClInclude Include="helper\texture.h">
+      <Filter>helper</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_glfw.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_opengl3.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>helper\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_opengl3_loader.h">
+      <Filter>helper\imgui</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
