--- a/Coursework2/Project_Template.vcxproj.filters
+++ b/Coursework2/Project_Template.vcxproj.filters
@@ -28,11 +28,11 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{3ef89db1-3b2b-4189-83df-b7ad9895bdff}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\imgui">
-      <UniqueIdentifier>{2e8b8188-2387-4fc6-a9c4-933cd06cac7b}</UniqueIdentifier>
+    <Filter Include="imgui">
+      <UniqueIdentifier>{14f316f3-3d7f-4ec7-86eb-96c2ab1fe1c9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="helper\imgui">
-      <UniqueIdentifier>{3972ff55-734d-4e97-8b4d-702424dd1ec1}</UniqueIdentifier>
+    <Filter Include="imgui\include">
+      <UniqueIdentifier>{93d5ed6b-ecd5-4e35-8e4c-8049041190d3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -73,25 +73,22 @@
       <Filter>helper\stb</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_glfw.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_opengl3.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Source Files\imgui</Filter>
+      <Filter>imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -175,32 +172,32 @@
     <ClInclude Include="helper\texture.h">
       <Filter>helper</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imconfig.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imconfig.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imgui.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imgui.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_glfw.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imgui_impl_glfw.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_opengl3.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imgui_impl_opengl3.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imgui_impl_opengl3_loader.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imgui_internal.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imstb_rectpack.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imstb_textedit.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\imgui_impl_opengl3_loader.h">
-      <Filter>helper\imgui</Filter>
+    <ClInclude Include="imgui\include\imstb_truetype.h">
+      <Filter>imgui\include</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
