--- a/Coursework2/imgui.ini
+++ b/Coursework2/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=60,60
-Size=32,35
+Pos=615,15
+Size=273,64
+Collapsed=0
+
+[Window][Console]
+Pos=7,15
+Size=381,163
 Collapsed=0
 
