--- a/Coursework2/Project_Template.vcxproj
+++ b/Coursework2/Project_Template.vcxproj
@@ -73,19 +73,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <LibraryPath>C:\Dependencies\lib;$(LibraryPath);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
+    <IncludePath>$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath);$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>C:\Dependencies\lib;$(LibraryPath);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
+    <IncludePath>$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath);$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Dependencies\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath);$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Dependencies\lib;$(LibraryPath);C:\Dependencies\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Dependencies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Dependencies\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)imgui\include;C:\Dependencies\include;$(IncludePath);C:\Dependencies\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Dependencies\lib;$(LibraryPath);C:\Dependencies\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -169,6 +173,8 @@
   <ItemGroup>
     <None Include="shader\basic_uniform.frag" />
     <None Include="shader\basic_uniform.vert" />
+    <None Include="shader\fire_simulation.frag" />
+    <None Include="shader\fire_simulation.vert" />
     <None Include="shader\flat_frag.glsl" />
     <None Include="shader\flat_vert.glsl" />
     <None Include="shader\particle_shader.frag" />
@@ -181,6 +187,8 @@
     <None Include="shader\wireframe.frag" />
     <None Include="shader\wireframe.geom" />
     <None Include="shader\wireframe.vert" />
+    <None Include="wateranimation.frag" />
+    <None Include="wateranimation.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helper\aabb.h" />
