--- a/Coursework2/Project_Template.vcxproj.filters
+++ b/Coursework2/Project_Template.vcxproj.filters
@@ -134,6 +134,18 @@
     <None Include="shader\silhouette.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shader\fire_simulation.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\fire_simulation.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="wateranimation.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="wateranimation.frag">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="helper\scene.h">
